# chata

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  windows-continuous.yml  windows_ci.yml
actions/windows/: build.bat
app/: CMakeLists.txt
app/src/: main.cpp
app/standalone/: CMakeLists.txt  main.cpp
chata/: CMakeLists.txt
chata/benchmark/: CMakeLists.txt  benchmark_chata.cpp
chata/include/chata/: BaseDefines.h  CompilerDefines.h  Path.h  String.h  TypeDefines.h
chata/src/chata/: Path.cpp  String.cpp
chata/test/: CMakeLists.txt  PathTest.cc  StringTest.cc
include/chata/base/: Chata.h  CommonMacros.h  CompilerMacros.h  Export.h  IntTypes.h  Math.h  MathConstant.h  MathUtils.h  PlatformMacros.h
include/chata/system/: Process.h
src/: CMakeLists.txt
src/base/: CMakeLists.txt  Chata.cpp  Math.cpp
src/chata/system/: ProcessLinux.cpp  ProcessWindows.cpp
src/chata/windows/: MinWindows.h
